--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: grab;
 }
 nav .nav-content {
   display: flex;
@@ -38,6 +39,10 @@ nav .nav-content {
 .nav-content .toggle-btn {
   font-size: 35px;
   color: #0e2431;
+  z-index: 100;
+  cursor: pointer;
+  transform: rotate(-225deg);
+  transition: 0.6s ease;
 }
 .nav-content span a {
   text-decoration: none;
@@ -47,8 +52,21 @@ nav .nav-content {
   font-size: 24px;
   color: #0e2431;
   transform: rotate(calc(var(--i) * (360deg / -8)));
+  opacity: 0.8;
+  transition: 0.2s;
 }
 .nav-content span {
   position: absolute;
+  transition: 0.6s ease;
+  opacity: 0;
+}
+nav.open .nav-content span {
   transform: rotate(calc(var(--i) * (360deg / 8))) translateY(120px);
+  opacity: 1;
+}
+nav.open .toggle-btn{
+transform: rotate(0deg);
+}
+.nav-content span a:hover i{
+opacity: 1;
 }
